<resources>
    <string name="app_name">Konnex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="add">Add</string>
    <string name="bug_frag_title">We love feedback and resolving bugs</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="enter_bug_title">Enter bug title</string>
    <string name="enter_bug_description">Enter bug description</string>


</resources>